# DesktopCalculator

./: .gitignore  LICENSE  README.md
src/: DesktopCalculator.sln
src/Calculator.Application/: App.axaml  App.axaml.cs  Calculator.Application.csproj  Program.cs  ViewLocator.cs  app.manifest
src/Calculator.Application/Assets/Help/: Help.md
src/Calculator.Application/Converters/: NullableToBoolConverter.cs
src/Calculator.Application/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
src/Calculator.Application/Views/: HelpWindow.axaml  HelpWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
src/Calculator.Core.Math/: Calculator.Core.Math.csproj  CppMathService.cs  IMathService.cs  MathCalculatorWrapper.cs
src/Calculator.Core.MathService/: Calculator.Core.MathService.csproj  CppMathService.cs  IMathService.cs
src/Calculator.Core.MathService/CalculatorCore/: CMakeLists.txt  calculator.cc  model_maths.cc  model_maths.h  model_token.cc  model_token.h
src/Calculator.Core.Test/: Calculator.Core.Test.csproj  MathCalculatorWrapperTests.cs
src/Calculator.Core.Tests/: Calculator.Core.Tests.csproj  CppMathServiceTests.cs  MathCalculatorWrapperTests.cs
src/Calculator.HistoryService/: HistoryService.cs  IHistoryService.cs  JsonHistoryService.cs
src/Calculator.HistoryService/Models/: GraphEntry.cs  GraphVisibleArea.cs  HistoryEntry.cs  MathEntry.cs
src/Calculator.HistoryService/Models/Enums/: HistoryEntryType.cs
